@@ -8,19 +8,46 @@
 	<oaf_attribute name="name" type="string" value="GNOME UI Components Factory"/>
 </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_UI_Component_Entry" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
+<oaf_server iid="OAFIID:GNOME_UI_Component_EntryFactory" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
 	<oaf_attribute name="repo_ids" type="stringv">
 		<item value="IDL:GNOME/SelectorFactory:1.0"/>
 		<item value="IDL:Bonobo/ItemContainer:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="GNOME Entry Factory"/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:GNOME_UI_Component_Entry" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:GNOME/Selector:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+	</oaf_attribute>
 	<oaf_attribute name="name" type="string" value="GNOME Entry"/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:GNOME_UI_Component_FileEntry" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:GNOME/Selector:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="GNOME File Entry"/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:GNOME_UI_Component_IconSelectorFactory" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:GNOME/SelectorFactory:1.0"/>
+		<item value="IDL:Bonobo/ItemContainer:1.0"/>
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="GNOME Icon Selector Factory"/>
 </oaf_server>
 
 <oaf_server iid="OAFIID:GNOME_UI_Component_IconSelector" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
 	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/SelectorFactory:1.0"/>
-		<item value="IDL:Bonobo/ItemContainer:1.0"/>
+		<item value="IDL:GNOME/Selector:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
 	<oaf_attribute name="name" type="string" value="GNOME Icon Selector"/>
@@ -29,6 +56,14 @@
 <oaf_server iid="OAFIID:GNOME_UI_Component_ImageEntry" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
 	<oaf_attribute name="repo_ids" type="stringv">
 		<item value="IDL:GNOME/SelectorFactory:1.0"/>
+		<item value="IDL:Bonobo/ItemContainer:1.0"/>
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="GNOME Image Entry"/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:GNOME_UI_Component_ImageEntry_Item" type="factory" location="OAFIID:GNOME_UI_Components_Factory">
+	<oaf_attribute name="repo_ids" type="stringv">
 		<item value="IDL:Bonobo/ItemContainer:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
